--- a/Admin-CSNet/views/add_cluster.ejs
+++ b/Admin-CSNet/views/add_cluster.ejs
@@ -141,18 +141,19 @@
                         <div class="bodycont">
                             <form id="login-form" method="post" role="form" ng-submit="addAdmin()">
 
-                                <p><input type="text" class="txtbox" placeholder="Cluster ID" ng-model="email"></p>
+                                <p><input type="text" class="txtbox" placeholder="Cluster ID" ng-model="id"></p>
 
-                                <p><input type="text" class="txtbox" placeholder="Name" ng-model="password"></p>
+                                <p><input type="text" class="txtbox" placeholder="Name" ng-model="name"></p>
 
 
 
-                                <p><input type="text" class="txtbox" placeholder="Number of Instances" ng-model="lastName"></p>
+                                <p><input type="text" class="txtbox" placeholder="Number of Instances" ng-model="nodes"></p>
+                                <p><input type="text" class="txtbox" placeholder="Number of Services" ng-model="services"></p>
 
 
 
                                 <div class="form-group col-md-6">
-                                    <button onclick="scheme()" type="submit" class="btn-login" name="login-button">Add Cluster</button>
+                                    <button ng-click="postCluster(id, name, nodes, services)" type="submit" class="btn-login" name="login-button">Add Cluster</button>
 
 
                                 </div>
